# deno-wgpu

./: .gitignore  .gitmodules  CAVEATS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  ci.yml.template
lib/: index.js
scripts/: .gitignore  idl.ts
scripts/lib/: idl2rust.ts
src/: .gitignore  adapter.c  encoding.ts  lib.rs  mod.ts  promisify.ts  teraflop.cpp
test/: gpu.spec.js
tests/: gpu.spec.ts  integration_tests.rs
